# lab07

./: Dockerfile  Report.md
.github/workflows/: CI.yml  MakeDebPackage.yml  MakeDnDPackage.yml  MakeRpmPackage.yml
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt
